--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,7 +25,7 @@ if (import.meta.env.DEFAULT_SETTING) {
 const _reset = import.meta.env.RESET_CONTINUOUS_DIALOGUE_OPTION
 ---
 
-<Layout title="ChatGPT">
+<Layout title="机器人花花">
   <main class="before sm:pt-8em py-2em">
     <Header />
     <Main
